styles/base.css
body {
    max-width: 760px;
    margin: 0 auto;
    text-align: center;
    font-family: 'Alegreya Sans SC', sans-serif;
}

header div {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px;
    background-color: #00008B;
  }
  
img {
    width: 100px;
    height: auto;
    margin-right: 10px;
  }
  
h1 {
    color: #fff;
    margin: 0;
}

nav {
    background-color: #333;
    color: #fff;
    padding: 10px;
    font-size: 20px;
}

nav ul {
	list-style-type: none;
}
/* nav a {
	display: block;
	color: #fff;
	text-align: center;
	padding: 1rem;
	text-decoration: none;
} */

li {
    list-style: none;
    padding: 15px;
}

main {
    display: grid;
    grid-template-columns: 1fr;
    gap: 20px;
    max-width: 100vw;
    margin: 0 auto;
    font-family: 'Roboto', sans-serif;
  }

main h2 {
    display: inline-block;
    width: 100%;
    border-bottom: 1px solid #333;
}

.card {
    border: 1px solid #ccc;
    padding: 0px;
    border-radius: 8px;
}

.card h3 {
    background-color: #00008B;
    color: #fff;
    padding: 10px;
    border-radius: 4px;
    margin-bottom: 0; 
    margin-top: 0;
}

#activitiesCard li{
    text-align: left;
}

footer {
    background-color: #00008B;
    color: #fff;
}

